--- a/binance_websocket.ipynb
+++ b/binance_websocket.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Original"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -412,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,8 +561,8 @@
     "            logging.info(\"No data logged. Skipping file creation.\")\n",
     "            return\n",
     "\n",
-    "        # Convert the first timestamp to UTC +8\n",
-    "        local_timestamp = datetime.strptime(self.first_timestamp, '%Y-%m-%d %H:%M:%S.%f') + timedelta(hours=8)\n",
+    "        # Convert the first timestamp to UTC\n",
+    "        local_timestamp = datetime.strptime(self.first_timestamp, '%Y-%m-%d %H:%M:%S.%f') + timedelta(hours=0) #this only modify the file name\n",
     "\n",
     "        # Format the timestamp to the desired format: YYYYMMDD_HHMMSS\n",
     "        formatted_timestamp = local_timestamp.strftime('%Y%m%d_%H%M%S')\n",
@@ -583,21 +590,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data saved to Binance_BTCUSDT_20241022_021225_10.parquet\n"
+      "Data saved to Binance_BTCUSDT_20241022_135045_3600.parquet\n"
      ]
     }
    ],
    "source": [
     "# In a Jupyter Notebook, you can directly use 'await' instead of 'asyncio.run()'\n",
     "listener = BinanceOrderbookListener(\"btcusdt\")\n",
-    "await listener.subscribe(duration=10, output_format='parquet')"
+    "await listener.subscribe(duration=3600, output_format='parquet')"
    ]
   },
   {
