--- a/OTC_USD_IDR/OTC_Prediction_Model_1.ipynb
+++ b/OTC_USD_IDR/OTC_Prediction_Model_1.ipynb
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,13 @@
       "Average Loss for this window (RMSE): 46.0628\n",
       "Window 3: Training on rows 2 to 31, validating on rows 32 to 34.\n",
       "Predicted values: [9145.125, 9088.5009765625, 9081.5732421875], Actual values: [9090.0, 9046.0, 9026.0]\n",
-      "Average Loss for this window (RMSE): 51.0664\n",
+      "Average Loss for this window (RMSE): 51.0664\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Window 4: Training on rows 3 to 32, validating on rows 33 to 35.\n",
       "Predicted values: [9088.69140625, 9081.5830078125, 9052.9931640625], Actual values: [9046.0, 9026.0, 9050.0]\n",
       "Average Loss for this window (RMSE): 33.7559\n",
@@ -690,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,56 +724,123 @@
     "        self.linear = nn.Linear(input_size, 1)\n",
     "\n",
     "    def forward(self, x):\n",
+    "        return self.linear(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Learning rate: 0.001, Batch size: 8, Epochs: 100, Window size: 60\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 67\u001b[0m\n\u001b[1;32m     65\u001b[0m     loss\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[1;32m     66\u001b[0m     torch\u001b[38;5;241m.\u001b[39mnn\u001b[38;5;241m.\u001b[39mutils\u001b[38;5;241m.\u001b[39mclip_grad_norm_(model\u001b[38;5;241m.\u001b[39mparameters(), max_norm\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1.0\u001b[39m)\n\u001b[0;32m---> 67\u001b[0m     \u001b[43moptimizer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstep\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     69\u001b[0m \u001b[38;5;66;03m# Evaluate the model\u001b[39;00m\n\u001b[1;32m     70\u001b[0m model\u001b[38;5;241m.\u001b[39meval()\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/optim/optimizer.py:491\u001b[0m, in \u001b[0;36mOptimizer.profile_hook_step.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    488\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_optimizer_step_code()\n\u001b[1;32m    490\u001b[0m \u001b[38;5;66;03m# call optimizer step post hooks\u001b[39;00m\n\u001b[0;32m--> 491\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m post_hook \u001b[38;5;129;01min\u001b[39;00m \u001b[43mchain\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    492\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_optimizer_step_post_hooks\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    493\u001b[0m \u001b[43m    \u001b[49m\u001b[43m_global_optimizer_post_hooks\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    494\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m    495\u001b[0m     post_hook(\u001b[38;5;28mself\u001b[39m, args, kwargs)\n\u001b[1;32m    497\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m out\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import pandas as pd\n",
+    "\n",
+    "torch.manual_seed(42)  # Set a seed for reproducibility\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# Drop the 'date' column and separate 'next_close' as the target variable\n",
+    "features_df = df.drop(['date', 'next_close'], axis=1)\n",
+    "target_df = df['next_close']\n",
+    "\n",
+    "# Convert features and target into PyTorch tensors\n",
+    "X = torch.tensor(features_df.values, dtype=torch.float32)\n",
+    "y = torch.tensor(target_df.values, dtype=torch.float32).view(-1, 1)  # Ensure target is a 2D tensor\n",
+    "\n",
+    "# Model definition\n",
+    "class LinearRegressionModel(nn.Module):\n",
+    "    def __init__(self, input_size):\n",
+    "        super(LinearRegressionModel, self).__init__()\n",
+    "        self.linear = nn.Linear(input_size, 1)\n",
+    "\n",
+    "    def forward(self, x):\n",
     "        return self.linear(x)\n",
     "\n",
     "# Hyperparameters to tune\n",
-    "learning_rates = [0.003, 0.005, 0.007]\n",
-    "batch_sizes = [16, 32, 64]\n",
-    "num_epochs = [150, 200, 250]\n",
+    "learning_rates = [0.001, 0.0005, 0.0001, 0.00005,0.00001]\n",
+    "batch_sizes = [8,16,32]\n",
+    "num_epochs = [100,150,200]\n",
+    "window_sizes = [60,80,100,120,140,180,220,260,300]\n",
     "\n",
+    "# Set input size based on feature columns in X\n",
+    "input_size = X.shape[1]\n",
     "results = []\n",
     "\n",
     "# Loop through each combination of hyperparameters\n",
     "for lr in learning_rates:\n",
     "    for batch_size in batch_sizes:\n",
     "        for epochs in num_epochs:\n",
-    "            model = LinearRegressionModel(input_size)\n",
-    "            optimizer = optim.SGD(model.parameters(), lr=lr)\n",
+    "            for window_size in window_sizes:\n",
+    "                print(f\"Learning rate: {lr}, Batch size: {batch_size}, Epochs: {epochs}, Window size: {window_size}\")\n",
+    "                \n",
+    "                model = LinearRegressionModel(input_size)\n",
+    "                optimizer = optim.SGD(model.parameters(), lr=lr)\n",
     "\n",
-    "            all_losses = []\n",
-    "            window_size = 30  # Set your desired window size\n",
-    "            num_windows = len(X) - window_size\n",
+    "                all_losses = []\n",
+    "                num_windows = len(X) - window_size\n",
     "\n",
-    "            for window_number in range(num_windows):\n",
-    "                start = window_number\n",
-    "                end = start + window_size\n",
-    "                X_train = X[start:end]\n",
-    "                y_train = y[start:end].view(-1, 1)\n",
-    "                X_val = X[end:end + 3]  # Adjust for number of predictions\n",
-    "                y_val = y[end:end + 3].view(-1, 1)\n",
+    "                for window_number in range(num_windows):\n",
+    "                    start = window_number\n",
+    "                    end = start + window_size\n",
+    "                    X_train = X[start:end]\n",
+    "                    y_train = y[start:end].view(-1, 1)\n",
+    "                    X_val = X[end:end + 3]  # Adjust for number of predictions\n",
+    "                    y_val = y[end:end + 3].view(-1, 1)\n",
     "\n",
-    "                model.train()\n",
-    "                for epoch in range(epochs):\n",
-    "                    outputs = model(X_train)\n",
+    "                    model.train()\n",
+    "                    for epoch in range(epochs):\n",
+    "                        outputs = model(X_train)\n",
     "\n",
-    "                    loss = nn.functional.mse_loss(outputs, y_train)  # MSE calculation\n",
+    "                        loss = nn.functional.mse_loss(outputs, y_train)  # MSE calculation\n",
     "\n",
-    "                    optimizer.zero_grad()\n",
-    "                    loss.backward()\n",
-    "                    torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=1.0)\n",
-    "                    optimizer.step()\n",
+    "                        optimizer.zero_grad()\n",
+    "                        loss.backward()\n",
+    "                        torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=1.0)\n",
+    "                        optimizer.step()\n",
     "\n",
-    "                # Evaluate the model\n",
-    "                model.eval()\n",
-    "                with torch.no_grad():\n",
-    "                    y_pred = model(X_val)\n",
-    "                    val_loss = nn.functional.mse_loss(y_pred, y_val)  # Calculate MSE for validation\n",
-    "                    rmse_loss = torch.sqrt(val_loss)  # Calculate RMSE\n",
-    "                    all_losses.append(rmse_loss.item())\n",
+    "                    # Evaluate the model\n",
+    "                    model.eval()\n",
+    "                    with torch.no_grad():\n",
+    "                        y_pred = model(X_val)\n",
+    "                        val_loss = nn.functional.mse_loss(y_pred, y_val)  # Calculate MSE for validation\n",
+    "                        rmse_loss = torch.sqrt(val_loss)  # Calculate RMSE\n",
+    "                        all_losses.append(rmse_loss.item())\n",
     "\n",
-    "            # Calculate total average loss across all windows\n",
-    "            average_loss = sum(all_losses) / len(all_losses)\n",
-    "            results.append({'learning_rate': lr, 'batch_size': batch_size, 'number_of_epochs': epochs, 'total_avg_loss': average_loss})\n",
+    "                # Calculate total average loss across all windows\n",
+    "                average_loss = sum(all_losses) / len(all_losses)\n",
+    "                print(f\"Average loss: {average_loss}\")\n",
+    "                \n",
+    "                # Store results with the window size\n",
+    "                results.append({\n",
+    "                    'learning_rate': lr,\n",
+    "                    'batch_size': batch_size,\n",
+    "                    'num_epochs': epochs,\n",
+    "                    'window_size': window_size,\n",
+    "                    'total_avg_loss': average_loss\n",
+    "                })\n",
     "\n",
     "# Convert results to DataFrame for easier handling and analysis\n",
     "results_df = pd.DataFrame(results)\n",
