finalizing the linear regression model

--- a/OTC_USD_IDR/bloomberg_usd_idr_model.ipynb
+++ b/OTC_USD_IDR/bloomberg_usd_idr_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,6 +245,287 @@
     "\n",
     "# Rename header\n",
     "raw_bloomberg_df = raw_bloomberg_df.rename(columns={'Unnamed: 0': 'Datetime'})\n",
+    "\n",
+    "raw_bloomberg_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>coin</th>\n",
+       "      <th>opentime</th>\n",
+       "      <th>openprice</th>\n",
+       "      <th>highprice</th>\n",
+       "      <th>lowprice</th>\n",
+       "      <th>closeprice</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>closetime</th>\n",
+       "      <th>quotevolume</th>\n",
+       "      <th>trades</th>\n",
+       "      <th>taker_buy_volume</th>\n",
+       "      <th>taker_buy_quote</th>\n",
+       "      <th>unused</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BTC</td>\n",
+       "      <td>1567900800000</td>\n",
+       "      <td>10000.00</td>\n",
+       "      <td>10412.65</td>\n",
+       "      <td>10000.00</td>\n",
+       "      <td>10391.63</td>\n",
+       "      <td>3096.291</td>\n",
+       "      <td>1567987199999</td>\n",
+       "      <td>3.209628e+07</td>\n",
+       "      <td>3754</td>\n",
+       "      <td>0.039</td>\n",
+       "      <td>3.933563e+02</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BTC</td>\n",
+       "      <td>1567987200000</td>\n",
+       "      <td>10316.62</td>\n",
+       "      <td>10475.54</td>\n",
+       "      <td>10077.22</td>\n",
+       "      <td>10307.00</td>\n",
+       "      <td>14824.373</td>\n",
+       "      <td>1568073599999</td>\n",
+       "      <td>1.524472e+08</td>\n",
+       "      <td>11296</td>\n",
+       "      <td>5452.451</td>\n",
+       "      <td>5.619740e+07</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BTC</td>\n",
+       "      <td>1568073600000</td>\n",
+       "      <td>10307.00</td>\n",
+       "      <td>10382.97</td>\n",
+       "      <td>9940.87</td>\n",
+       "      <td>10102.02</td>\n",
+       "      <td>9068.955</td>\n",
+       "      <td>1568159999999</td>\n",
+       "      <td>9.271765e+07</td>\n",
+       "      <td>10089</td>\n",
+       "      <td>6395.462</td>\n",
+       "      <td>6.552636e+07</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BTC</td>\n",
+       "      <td>1568160000000</td>\n",
+       "      <td>10094.27</td>\n",
+       "      <td>10293.11</td>\n",
+       "      <td>9884.31</td>\n",
+       "      <td>10159.55</td>\n",
+       "      <td>10897.922</td>\n",
+       "      <td>1568246399999</td>\n",
+       "      <td>1.097862e+08</td>\n",
+       "      <td>13811</td>\n",
+       "      <td>7724.442</td>\n",
+       "      <td>7.784116e+07</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>BTC</td>\n",
+       "      <td>1568246400000</td>\n",
+       "      <td>10163.06</td>\n",
+       "      <td>10450.13</td>\n",
+       "      <td>10042.12</td>\n",
+       "      <td>10415.13</td>\n",
+       "      <td>15609.634</td>\n",
+       "      <td>1568332799999</td>\n",
+       "      <td>1.594942e+08</td>\n",
+       "      <td>20060</td>\n",
+       "      <td>10117.798</td>\n",
+       "      <td>1.031607e+08</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1877</th>\n",
+       "      <td>BTC</td>\n",
+       "      <td>1730073600000</td>\n",
+       "      <td>67992.70</td>\n",
+       "      <td>70331.00</td>\n",
+       "      <td>67584.20</td>\n",
+       "      <td>69940.00</td>\n",
+       "      <td>256128.622</td>\n",
+       "      <td>1730159999999</td>\n",
+       "      <td>1.764992e+10</td>\n",
+       "      <td>3334954</td>\n",
+       "      <td>135854.890</td>\n",
+       "      <td>9.364715e+09</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1878</th>\n",
+       "      <td>BTC</td>\n",
+       "      <td>1730160000000</td>\n",
+       "      <td>69939.90</td>\n",
+       "      <td>73660.00</td>\n",
+       "      <td>69733.00</td>\n",
+       "      <td>72739.50</td>\n",
+       "      <td>382502.060</td>\n",
+       "      <td>1730246399999</td>\n",
+       "      <td>2.750227e+10</td>\n",
+       "      <td>4796294</td>\n",
+       "      <td>199025.299</td>\n",
+       "      <td>1.431096e+10</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1879</th>\n",
+       "      <td>BTC</td>\n",
+       "      <td>1730246400000</td>\n",
+       "      <td>72739.50</td>\n",
+       "      <td>72984.90</td>\n",
+       "      <td>71444.20</td>\n",
+       "      <td>72349.00</td>\n",
+       "      <td>227108.808</td>\n",
+       "      <td>1730332799999</td>\n",
+       "      <td>1.639468e+10</td>\n",
+       "      <td>3249471</td>\n",
+       "      <td>113211.086</td>\n",
+       "      <td>8.173511e+09</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1880</th>\n",
+       "      <td>BTC</td>\n",
+       "      <td>1730332800000</td>\n",
+       "      <td>72349.00</td>\n",
+       "      <td>72720.30</td>\n",
+       "      <td>69705.00</td>\n",
+       "      <td>70321.90</td>\n",
+       "      <td>256485.328</td>\n",
+       "      <td>1730419199999</td>\n",
+       "      <td>1.826086e+10</td>\n",
+       "      <td>3578458</td>\n",
+       "      <td>122732.500</td>\n",
+       "      <td>8.739091e+09</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1881</th>\n",
+       "      <td>BTC</td>\n",
+       "      <td>1730419200000</td>\n",
+       "      <td>70321.90</td>\n",
+       "      <td>70500.00</td>\n",
+       "      <td>68870.40</td>\n",
+       "      <td>69159.20</td>\n",
+       "      <td>79136.818</td>\n",
+       "      <td>1730505599999</td>\n",
+       "      <td>5.503840e+09</td>\n",
+       "      <td>1123850</td>\n",
+       "      <td>35893.241</td>\n",
+       "      <td>2.496463e+09</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1882 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     coin       opentime  openprice  highprice  lowprice  closeprice  \\\n",
+       "0     BTC  1567900800000   10000.00   10412.65  10000.00    10391.63   \n",
+       "1     BTC  1567987200000   10316.62   10475.54  10077.22    10307.00   \n",
+       "2     BTC  1568073600000   10307.00   10382.97   9940.87    10102.02   \n",
+       "3     BTC  1568160000000   10094.27   10293.11   9884.31    10159.55   \n",
+       "4     BTC  1568246400000   10163.06   10450.13  10042.12    10415.13   \n",
+       "...   ...            ...        ...        ...       ...         ...   \n",
+       "1877  BTC  1730073600000   67992.70   70331.00  67584.20    69940.00   \n",
+       "1878  BTC  1730160000000   69939.90   73660.00  69733.00    72739.50   \n",
+       "1879  BTC  1730246400000   72739.50   72984.90  71444.20    72349.00   \n",
+       "1880  BTC  1730332800000   72349.00   72720.30  69705.00    70321.90   \n",
+       "1881  BTC  1730419200000   70321.90   70500.00  68870.40    69159.20   \n",
+       "\n",
+       "          volume      closetime   quotevolume   trades  taker_buy_volume  \\\n",
+       "0       3096.291  1567987199999  3.209628e+07     3754             0.039   \n",
+       "1      14824.373  1568073599999  1.524472e+08    11296          5452.451   \n",
+       "2       9068.955  1568159999999  9.271765e+07    10089          6395.462   \n",
+       "3      10897.922  1568246399999  1.097862e+08    13811          7724.442   \n",
+       "4      15609.634  1568332799999  1.594942e+08    20060         10117.798   \n",
+       "...          ...            ...           ...      ...               ...   \n",
+       "1877  256128.622  1730159999999  1.764992e+10  3334954        135854.890   \n",
+       "1878  382502.060  1730246399999  2.750227e+10  4796294        199025.299   \n",
+       "1879  227108.808  1730332799999  1.639468e+10  3249471        113211.086   \n",
+       "1880  256485.328  1730419199999  1.826086e+10  3578458        122732.500   \n",
+       "1881   79136.818  1730505599999  5.503840e+09  1123850         35893.241   \n",
+       "\n",
+       "      taker_buy_quote  unused  \n",
+       "0        3.933563e+02       0  \n",
+       "1        5.619740e+07       0  \n",
+       "2        6.552636e+07       0  \n",
+       "3        7.784116e+07       0  \n",
+       "4        1.031607e+08       0  \n",
+       "...               ...     ...  \n",
+       "1877     9.364715e+09       0  \n",
+       "1878     1.431096e+10       0  \n",
+       "1879     8.173511e+09       0  \n",
+       "1880     8.739091e+09       0  \n",
+       "1881     2.496463e+09       0  \n",
+       "\n",
+       "[1882 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read bloomberg data\n",
+    "raw_bloomberg_df = pd.read_csv('btc_daily.csv', header=0)\n",
+    "\n",
+    "# # Rename header\n",
+    "# raw_bloomberg_df = raw_bloomberg_df.rename(columns={'Unnamed: 0': 'Datetime'})\n",
     "\n",
     "raw_bloomberg_df"
    ]
@@ -1195,7 +1476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
