--- a/OTC_USD_IDR/OTC_Prediction_Model_1.ipynb
+++ b/OTC_USD_IDR/OTC_Prediction_Model_1.ipynb
@@ -10232,7 +10232,7 @@
     "set_limit = False     # Set this to False to process all windows\n",
     "\n",
     "# Define list of window sizes\n",
-    "window_sizes = [400]\n",
+    "window_sizes = list(range(100, 3101, 10))\n",
     "\n",
     "# List to store results\n",
     "results = []\n",
