--- a/OTC_USD_IDR/OTC_USD_IDR_Prediction_ML_Linear_Regression.ipynb
+++ b/OTC_USD_IDR/OTC_USD_IDR_Prediction_ML_Linear_Regression.ipynb
@@ -1232,6 +1232,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (2_375_396, 12)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>coin</th><th>opentime</th><th>openprice</th><th>highprice</th><th>lowprice</th><th>closeprice</th><th>volume</th><th>closetime</th><th>quotevolume</th><th>trades</th><th>taker_buy_volume</th><th>taker_buy_quote</th></tr><tr><td>str</td><td>i64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>i64</td><td>f64</td><td>i64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;USDT&quot;</td><td>1587096000000</td><td>15603.0</td><td>15603.0</td><td>3500.0</td><td>3800.0</td><td>2111.0</td><td>1587096059999</td><td>7.9510e6</td><td>12</td><td>180.42</td><td>665115.9</td></tr><tr><td>&quot;USDT&quot;</td><td>1587096060000</td><td>3900.0</td><td>9999.0</td><td>3121.0</td><td>9999.0</td><td>1518.8</td><td>1587096119999</td><td>8.0077e6</td><td>30</td><td>569.4</td><td>4.3036e6</td></tr><tr><td>&quot;USDT&quot;</td><td>1587096120000</td><td>9999.0</td><td>15400.0</td><td>3121.0</td><td>15300.0</td><td>3436.21</td><td>1587096179999</td><td>4.8426e7</td><td>26</td><td>1093.32</td><td>1.5983e7</td></tr><tr><td>&quot;USDT&quot;</td><td>1587096180000</td><td>15300.0</td><td>15399.0</td><td>3905.0</td><td>13662.0</td><td>2006.86</td><td>1587096239999</td><td>2.5022e7</td><td>20</td><td>21.7</td><td>334158.3</td></tr><tr><td>&quot;USDT&quot;</td><td>1587096240000</td><td>13662.0</td><td>15000.0</td><td>3905.0</td><td>15000.0</td><td>1858.21</td><td>1587096299999</td><td>2.1579e7</td><td>25</td><td>473.01</td><td>6.1570e6</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>&quot;USDT&quot;</td><td>1729727700000</td><td>15691.0</td><td>15691.0</td><td>15691.0</td><td>15691.0</td><td>0.0</td><td>1729727759999</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td></tr><tr><td>&quot;USDT&quot;</td><td>1729727760000</td><td>15691.0</td><td>15691.0</td><td>15691.0</td><td>15691.0</td><td>0.0</td><td>1729727819999</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td></tr><tr><td>&quot;USDT&quot;</td><td>1729727820000</td><td>15691.0</td><td>15691.0</td><td>15691.0</td><td>15691.0</td><td>5.0</td><td>1729727879999</td><td>78455.0</td><td>1</td><td>0.0</td><td>0.0</td></tr><tr><td>&quot;USDT&quot;</td><td>1729727880000</td><td>15693.0</td><td>15693.0</td><td>15693.0</td><td>15693.0</td><td>5.0</td><td>1729727939999</td><td>78465.0</td><td>1</td><td>5.0</td><td>78465.0</td></tr><tr><td>&quot;USDT&quot;</td><td>1729727940000</td><td>15693.0</td><td>15693.0</td><td>15693.0</td><td>15693.0</td><td>0.0</td><td>1729727999999</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (2_375_396, 12)\n",
+       "┌──────┬─────────────┬───────────┬───────────┬───┬─────────────┬────────┬─────────────┬────────────┐\n",
+       "│ coin ┆ opentime    ┆ openprice ┆ highprice ┆ … ┆ quotevolume ┆ trades ┆ taker_buy_v ┆ taker_buy_ │\n",
+       "│ ---  ┆ ---         ┆ ---       ┆ ---       ┆   ┆ ---         ┆ ---    ┆ olume       ┆ quote      │\n",
+       "│ str  ┆ i64         ┆ f64       ┆ f64       ┆   ┆ f64         ┆ i64    ┆ ---         ┆ ---        │\n",
+       "│      ┆             ┆           ┆           ┆   ┆             ┆        ┆ f64         ┆ f64        │\n",
+       "╞══════╪═════════════╪═══════════╪═══════════╪═══╪═════════════╪════════╪═════════════╪════════════╡\n",
+       "│ USDT ┆ 15870960000 ┆ 15603.0   ┆ 15603.0   ┆ … ┆ 7.9510e6    ┆ 12     ┆ 180.42      ┆ 665115.9   │\n",
+       "│      ┆ 00          ┆           ┆           ┆   ┆             ┆        ┆             ┆            │\n",
+       "│ USDT ┆ 15870960600 ┆ 3900.0    ┆ 9999.0    ┆ … ┆ 8.0077e6    ┆ 30     ┆ 569.4       ┆ 4.3036e6   │\n",
+       "│      ┆ 00          ┆           ┆           ┆   ┆             ┆        ┆             ┆            │\n",
+       "│ USDT ┆ 15870961200 ┆ 9999.0    ┆ 15400.0   ┆ … ┆ 4.8426e7    ┆ 26     ┆ 1093.32     ┆ 1.5983e7   │\n",
+       "│      ┆ 00          ┆           ┆           ┆   ┆             ┆        ┆             ┆            │\n",
+       "│ USDT ┆ 15870961800 ┆ 15300.0   ┆ 15399.0   ┆ … ┆ 2.5022e7    ┆ 20     ┆ 21.7        ┆ 334158.3   │\n",
+       "│      ┆ 00          ┆           ┆           ┆   ┆             ┆        ┆             ┆            │\n",
+       "│ USDT ┆ 15870962400 ┆ 13662.0   ┆ 15000.0   ┆ … ┆ 2.1579e7    ┆ 25     ┆ 473.01      ┆ 6.1570e6   │\n",
+       "│      ┆ 00          ┆           ┆           ┆   ┆             ┆        ┆             ┆            │\n",
+       "│ …    ┆ …           ┆ …         ┆ …         ┆ … ┆ …           ┆ …      ┆ …           ┆ …          │\n",
+       "│ USDT ┆ 17297277000 ┆ 15691.0   ┆ 15691.0   ┆ … ┆ 0.0         ┆ 0      ┆ 0.0         ┆ 0.0        │\n",
+       "│      ┆ 00          ┆           ┆           ┆   ┆             ┆        ┆             ┆            │\n",
+       "│ USDT ┆ 17297277600 ┆ 15691.0   ┆ 15691.0   ┆ … ┆ 0.0         ┆ 0      ┆ 0.0         ┆ 0.0        │\n",
+       "│      ┆ 00          ┆           ┆           ┆   ┆             ┆        ┆             ┆            │\n",
+       "│ USDT ┆ 17297278200 ┆ 15691.0   ┆ 15691.0   ┆ … ┆ 78455.0     ┆ 1      ┆ 0.0         ┆ 0.0        │\n",
+       "│      ┆ 00          ┆           ┆           ┆   ┆             ┆        ┆             ┆            │\n",
+       "│ USDT ┆ 17297278800 ┆ 15693.0   ┆ 15693.0   ┆ … ┆ 78465.0     ┆ 1      ┆ 5.0         ┆ 78465.0    │\n",
+       "│      ┆ 00          ┆           ┆           ┆   ┆             ┆        ┆             ┆            │\n",
+       "│ USDT ┆ 17297279400 ┆ 15693.0   ┆ 15693.0   ┆ … ┆ 0.0         ┆ 0      ┆ 0.0         ┆ 0.0        │\n",
+       "│      ┆ 00          ┆           ┆           ┆   ┆             ┆        ┆             ┆            │\n",
+       "└──────┴─────────────┴───────────┴───────────┴───┴─────────────┴────────┴─────────────┴────────────┘"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import polars as pl\n",
+    "\n",
+    "# Read parquet file\n",
+    "usdt_idrt = pl.read_parquet(\"USDT_IDRT.parquet\")\n",
+    "\n",
+    "usdt_idrt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -2639,7 +2702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3027,8 +3090,8 @@
     "set_limit = False     # Set this to False to process all windows\n",
     "\n",
     "# Define list of window sizes\n",
-    "# window_sizes = [440] # Optimum\n",
-    "window_sizes = list(range(425, 436, 1))\n",
+    "window_sizes = [440] # Optimum\n",
+    "# window_sizes = list(range(425, 436, 1))\n",
     "\n",
     "# List to store results\n",
     "results = []\n",
