--- a/OTC_USD_IDR/Untitled-1.ipynb
+++ b/OTC_USD_IDR/Untitled-1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -51,48 +51,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2020-11-02 00:00:00+00:00</td>\n",
-       "      <td>5108.028809</td>\n",
-       "      <td>5130.686035</td>\n",
-       "      <td>5073.500000</td>\n",
-       "      <td>5115.127930</td>\n",
-       "      <td>97646200</td>\n",
+       "      <td>2024-10-15 00:00:00+00:00</td>\n",
+       "      <td>15554.0</td>\n",
+       "      <td>15554.0</td>\n",
+       "      <td>15554.0</td>\n",
+       "      <td>15554.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2020-11-03 00:00:00+00:00</td>\n",
-       "      <td>5133.981934</td>\n",
-       "      <td>5162.347168</td>\n",
-       "      <td>5131.949219</td>\n",
-       "      <td>5159.452148</td>\n",
-       "      <td>101351100</td>\n",
+       "      <td>2024-10-15 01:00:00+00:00</td>\n",
+       "      <td>15576.0</td>\n",
+       "      <td>15576.0</td>\n",
+       "      <td>15554.0</td>\n",
+       "      <td>15554.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2020-11-04 00:00:00+00:00</td>\n",
-       "      <td>5170.823242</td>\n",
-       "      <td>5188.008789</td>\n",
-       "      <td>5105.199219</td>\n",
-       "      <td>5105.199219</td>\n",
-       "      <td>103974300</td>\n",
+       "      <td>2024-10-15 02:00:00+00:00</td>\n",
+       "      <td>15576.0</td>\n",
+       "      <td>15576.0</td>\n",
+       "      <td>15554.0</td>\n",
+       "      <td>15554.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2020-11-05 00:00:00+00:00</td>\n",
-       "      <td>5161.390137</td>\n",
-       "      <td>5260.326172</td>\n",
-       "      <td>5161.390137</td>\n",
-       "      <td>5260.326172</td>\n",
-       "      <td>108832000</td>\n",
+       "      <td>2024-10-15 03:00:00+00:00</td>\n",
+       "      <td>15534.0</td>\n",
+       "      <td>15576.0</td>\n",
+       "      <td>15529.0</td>\n",
+       "      <td>15542.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2020-11-06 00:00:00+00:00</td>\n",
-       "      <td>5276.164062</td>\n",
-       "      <td>5335.528809</td>\n",
-       "      <td>5246.701172</td>\n",
-       "      <td>5335.528809</td>\n",
-       "      <td>104732100</td>\n",
+       "      <td>2024-10-15 04:00:00+00:00</td>\n",
+       "      <td>15544.0</td>\n",
+       "      <td>15576.0</td>\n",
+       "      <td>15539.0</td>\n",
+       "      <td>15539.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -104,86 +104,73 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>970</th>\n",
-       "      <td>2024-11-01 00:00:00+00:00</td>\n",
-       "      <td>7573.793945</td>\n",
-       "      <td>7583.687988</td>\n",
-       "      <td>7485.457031</td>\n",
-       "      <td>7505.256836</td>\n",
-       "      <td>155270800</td>\n",
+       "      <th>255</th>\n",
+       "      <td>2024-11-07 16:00:00+00:00</td>\n",
+       "      <td>15762.0</td>\n",
+       "      <td>15762.0</td>\n",
+       "      <td>15729.0</td>\n",
+       "      <td>15729.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>971</th>\n",
-       "      <td>2024-11-04 00:00:00+00:00</td>\n",
-       "      <td>7505.110840</td>\n",
-       "      <td>7529.703125</td>\n",
-       "      <td>7415.809082</td>\n",
-       "      <td>7479.502930</td>\n",
-       "      <td>212287900</td>\n",
+       "      <th>256</th>\n",
+       "      <td>2024-11-07 17:00:00+00:00</td>\n",
+       "      <td>15730.0</td>\n",
+       "      <td>15730.0</td>\n",
+       "      <td>15730.0</td>\n",
+       "      <td>15730.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>972</th>\n",
-       "      <td>2024-11-05 00:00:00+00:00</td>\n",
-       "      <td>7474.452148</td>\n",
-       "      <td>7496.996094</td>\n",
-       "      <td>7451.547852</td>\n",
-       "      <td>7491.931152</td>\n",
-       "      <td>182653900</td>\n",
+       "      <th>257</th>\n",
+       "      <td>2024-11-07 18:00:00+00:00</td>\n",
+       "      <td>15762.0</td>\n",
+       "      <td>15762.0</td>\n",
+       "      <td>15729.0</td>\n",
+       "      <td>15729.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>973</th>\n",
-       "      <td>2024-11-06 00:00:00+00:00</td>\n",
-       "      <td>7495.130859</td>\n",
-       "      <td>7506.601074</td>\n",
-       "      <td>7363.030762</td>\n",
-       "      <td>7383.868164</td>\n",
-       "      <td>235788800</td>\n",
+       "      <th>258</th>\n",
+       "      <td>2024-11-07 19:00:00+00:00</td>\n",
+       "      <td>15762.0</td>\n",
+       "      <td>15763.0</td>\n",
+       "      <td>15729.0</td>\n",
+       "      <td>15729.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>974</th>\n",
-       "      <td>2024-11-07 00:00:00+00:00</td>\n",
-       "      <td>7373.566895</td>\n",
-       "      <td>7381.757812</td>\n",
-       "      <td>7243.859863</td>\n",
-       "      <td>7243.859863</td>\n",
-       "      <td>204087800</td>\n",
+       "      <th>259</th>\n",
+       "      <td>2024-11-07 21:00:00+00:00</td>\n",
+       "      <td>15763.0</td>\n",
+       "      <td>15763.0</td>\n",
+       "      <td>15729.0</td>\n",
+       "      <td>15729.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>975 rows × 6 columns</p>\n",
+       "<p>260 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         date         open         high          low  \\\n",
-       "0   2020-11-02 00:00:00+00:00  5108.028809  5130.686035  5073.500000   \n",
-       "1   2020-11-03 00:00:00+00:00  5133.981934  5162.347168  5131.949219   \n",
-       "2   2020-11-04 00:00:00+00:00  5170.823242  5188.008789  5105.199219   \n",
-       "3   2020-11-05 00:00:00+00:00  5161.390137  5260.326172  5161.390137   \n",
-       "4   2020-11-06 00:00:00+00:00  5276.164062  5335.528809  5246.701172   \n",
-       "..                        ...          ...          ...          ...   \n",
-       "970 2024-11-01 00:00:00+00:00  7573.793945  7583.687988  7485.457031   \n",
-       "971 2024-11-04 00:00:00+00:00  7505.110840  7529.703125  7415.809082   \n",
-       "972 2024-11-05 00:00:00+00:00  7474.452148  7496.996094  7451.547852   \n",
-       "973 2024-11-06 00:00:00+00:00  7495.130859  7506.601074  7363.030762   \n",
-       "974 2024-11-07 00:00:00+00:00  7373.566895  7381.757812  7243.859863   \n",
+       "                         date     open     high      low    close  volume\n",
+       "0   2024-10-15 00:00:00+00:00  15554.0  15554.0  15554.0  15554.0       0\n",
+       "1   2024-10-15 01:00:00+00:00  15576.0  15576.0  15554.0  15554.0       0\n",
+       "2   2024-10-15 02:00:00+00:00  15576.0  15576.0  15554.0  15554.0       0\n",
+       "3   2024-10-15 03:00:00+00:00  15534.0  15576.0  15529.0  15542.0       0\n",
+       "4   2024-10-15 04:00:00+00:00  15544.0  15576.0  15539.0  15539.0       0\n",
+       "..                        ...      ...      ...      ...      ...     ...\n",
+       "255 2024-11-07 16:00:00+00:00  15762.0  15762.0  15729.0  15729.0       0\n",
+       "256 2024-11-07 17:00:00+00:00  15730.0  15730.0  15730.0  15730.0       0\n",
+       "257 2024-11-07 18:00:00+00:00  15762.0  15762.0  15729.0  15729.0       0\n",
+       "258 2024-11-07 19:00:00+00:00  15762.0  15763.0  15729.0  15729.0       0\n",
+       "259 2024-11-07 21:00:00+00:00  15763.0  15763.0  15729.0  15729.0       0\n",
        "\n",
-       "           close     volume  \n",
-       "0    5115.127930   97646200  \n",
-       "1    5159.452148  101351100  \n",
-       "2    5105.199219  103974300  \n",
-       "3    5260.326172  108832000  \n",
-       "4    5335.528809  104732100  \n",
-       "..           ...        ...  \n",
-       "970  7505.256836  155270800  \n",
-       "971  7479.502930  212287900  \n",
-       "972  7491.931152  182653900  \n",
-       "973  7383.868164  235788800  \n",
-       "974  7243.859863  204087800  \n",
-       "\n",
-       "[975 rows x 6 columns]"
+       "[260 rows x 6 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,12 +180,12 @@
     "import datetime\n",
     "\n",
     "# Set the ticker symbol \n",
-    "# ticker = \"USDIDR=X\" # USD/IDR\n",
+    "ticker = \"USDIDR=X\" # USD/IDR\n",
     "# ticker = \"^GSPC\" # S&P 500\n",
-    "ticker = \"^JKSE\" # IHSG\n",
+    "# ticker = \"^JKSE\" # IHSG\n",
     "\n",
     "# Define the data interval (use '1d' for daily or '1h' for hourly data)\n",
-    "interval = '1d'  # Change to '1h' for hourly data\n",
+    "interval = '60m'  # Change to '1h' for hourly data\n",
     "\n",
     "# Download the historical data\n",
     "# Define the start and end dates, e.g., for the past year\n",
@@ -206,7 +193,7 @@
     "# Get today's date\n",
     "end_date = datetime.datetime.today().strftime('%Y-%m-%d')\n",
     "\n",
-    "yahoo_data = yf.download(ticker, start=\"2020-10-31\", end=end_date, interval=interval)\n",
+    "yahoo_data = yf.download(ticker, start=\"2024-10-15\", end=end_date, interval=interval)\n",
     "\n",
     "# Reset index to turn 'date' from index into a column\n",
     "yahoo_df = yahoo_data.reset_index()\n",
@@ -10436,6 +10423,13 @@
     "# ------------------- Display the Final DataFrame -------------------\n",
     "combined_df_features"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
